[gd_scene load_steps=15 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://resources/Balls/GenericBall/BALL.gd" type="Script" id=2]
[ext_resource path="res://MISC/reallySimpleScripts/BallInfo.gd" type="Script" id=3]
[ext_resource path="res://resources/Fonts/defaultFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/Themes/defaultTheme.tres" type="Theme" id=5]
[ext_resource path="res://MISC/reallySimpleScripts/addText.gd" type="Script" id=6]
[ext_resource path="res://MISC/reallySimpleScripts/addTexture.gd" type="Script" id=7]
[ext_resource path="res://resources/Balls/GenericBall/transferResources.gd" type="Script" id=8]
[ext_resource path="res://resources/Styles/BallBackgroundPanel.tres" type="StyleBox" id=9]
[ext_resource path="res://resources/Balls/GenericBall/GenericBallResource.tres" type="Resource" id=10]
[ext_resource path="res://AbilityInfo/AbilityInfoPanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://resources/Balls/GenericBall/abilitiesInfoContainer.gd" type="Script" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 1.01718

[sub_resource type="SphereMesh" id=2]

[node name="GENERIC BALL" type="Node2D"]
z_index = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}
ballResource = ExtResource( 10 )

[node name="BALL" type="RigidBody2D" parent="." groups=[
"Ball",
]]
input_pickable = true
contacts_reported = 5
contact_monitor = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BALL"]
shape = SubResource( 1 )

[node name="mesh" type="MeshInstance2D" parent="BALL/CollisionShape2D"]
mesh = SubResource( 2 )
script = ExtResource( 7 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="BALL"]
rotation = 3.14159
scale = Vector2( 0.1, 0.1 )
amount = 2
lifetime = 1.5
speed_scale = 4.29
randomness = 0.07
local_coords = false
texture = ExtResource( 1 )
emission_shape = 2
emission_rect_extents = Vector2( 100, -100 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( -0.2, -0.98 )
angular_velocity = 41.44
angular_velocity_random = 0.21
linear_accel = 48.92
linear_accel_random = 0.16
angle = 97.3
angle_random = 1.0
scale_amount = 0.1
scale_amount_random = 0.15
color = Color( 0.945098, 0.0941176, 0.0941176, 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Control" type="Control" parent="Node2D"]
visible = false
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = -19.0
mouse_filter = 2
theme = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Node2D/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 5 )
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Node2D/Control/Panel"]
anchor_left = 0.15
anchor_top = 0.1
anchor_right = 0.85
anchor_bottom = 0.4
margin_left = -3.8147e-06
margin_top = 5.72205e-06
margin_bottom = 7.62939e-06
mouse_filter = 2
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Node2D/Control/Panel/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
fit_content_height = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Node2D/Control"]
anchor_left = 0.15
anchor_top = 0.5
anchor_right = 0.85
anchor_bottom = 0.9
margin_right = -18.0
margin_bottom = 427.6
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/Control/ScrollContainer"]
mouse_filter = 2
custom_constants/separation = 32
script = ExtResource( 12 )
panel = ExtResource( 11 )

[connection signal="changeToStatic" from="." to="BALL" method="_on_GENERIC_BALL_changeToStatic"]
[connection signal="draggable" from="." to="BALL" method="_on_GENERIC_BALL_draggable"]
[connection signal="flipGravity" from="." to="BALL" method="_on_GENERIC_BALL_flipGravity"]
[connection signal="setTeam" from="." to="BALL" method="_on_GENERIC_BALL_setTeam"]
[connection signal="stopBouncing" from="." to="BALL" method="_on_GENERIC_BALL_stopBouncing"]
[connection signal="transferResources" from="." to="BALL" method="_on_GENERIC_BALL_transferResources"]
[connection signal="addInfo" from="BALL" to="Node2D/Control/ScrollContainer/VBoxContainer" method="_on_BALL_addInfo"]
[connection signal="addText" from="BALL" to="Node2D/Control/Panel/Panel2/RichTextLabel" method="_on_BALL_addText"]
[connection signal="addTexture" from="BALL" to="BALL/CollisionShape2D/mesh" method="_on_BALL_addTexture"]
[connection signal="beingDragged" from="BALL" to="Node2D/Control" method="_on_BALL_beingDragged"]
[connection signal="body_shape_entered" from="BALL" to="BALL" method="_on_BALL_body_shape_entered"]
[connection signal="mouse_entered" from="BALL" to="BALL" method="_on_BALL_mouse_entered"]
[connection signal="mouse_entered" from="BALL" to="Node2D/Control" method="_on_BALL_mouse_entered"]
[connection signal="mouse_exited" from="BALL" to="Node2D/Control" method="_on_BALL_mouse_exited"]
[connection signal="turnOff" from="BALL" to="Node2D/Control" method="_on_BALL_turnOff"]
